--- a/lib/css/output.css
+++ b/lib/css/output.css
@@ -33,6 +33,7 @@
     --color-gray-700: oklch(0.373 0.034 259.733);
     --color-gray-800: oklch(0.278 0.033 256.848);
     --color-gray-900: oklch(0.21 0.034 264.665);
+    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --breakpoint-2xl: 96rem;
@@ -981,8 +982,8 @@
   .mx-auto {
     margin-inline: auto;
   }
-  .my-3 {
-    margin-block: calc(var(--spacing) * 3);
+  .my-2 {
+    margin-block: calc(var(--spacing) * 2);
   }
   .my-4 {
     margin-block: calc(var(--spacing) * 4);
@@ -1002,20 +1003,17 @@
   .-mt-1 {
     margin-top: calc(var(--spacing) * -1);
   }
+  .-mt-4 {
+    margin-top: calc(var(--spacing) * -4);
+  }
   .-mt-24 {
     margin-top: calc(var(--spacing) * -24);
   }
   .-mt-40 {
     margin-top: calc(var(--spacing) * -40);
   }
-  .mt-0 {
-    margin-top: calc(var(--spacing) * 0);
-  }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
-  }
-  .mt-1\.5 {
-    margin-top: calc(var(--spacing) * 1.5);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
@@ -1336,6 +1334,9 @@
   .-mr-4 {
     margin-right: calc(var(--spacing) * -4);
   }
+  .-mr-8 {
+    margin-right: calc(var(--spacing) * -8);
+  }
   .-mr-\[2px\] {
     margin-right: calc(2px * -1);
   }
@@ -1406,6 +1407,9 @@
   .mb-40 {
     margin-bottom: calc(var(--spacing) * 40);
   }
+  .mb-auto {
+    margin-bottom: auto;
+  }
   .apexcharts-xaxistooltip {
     .apexcharts-canvas & {
       color: var(--color-gray-500) !important;
@@ -1446,11 +1450,17 @@
   .-ml-4 {
     margin-left: calc(var(--spacing) * -4);
   }
+  .-ml-8 {
+    margin-left: calc(var(--spacing) * -8);
+  }
   .-ml-\[2px\] {
     margin-left: calc(2px * -1);
   }
   .ml-0 {
     margin-left: calc(var(--spacing) * 0);
+  }
+  .ml-1\.5 {
+    margin-left: calc(var(--spacing) * 1.5);
   }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
@@ -1520,14 +1530,8 @@
   .h-auto {
     height: auto;
   }
-  .h-dvh {
-    height: 100dvh;
-  }
   .h-full {
     height: 100%;
-  }
-  .h-screen {
-    height: 100vh;
   }
   .max-h-80 {
     max-height: calc(var(--spacing) * 80);
@@ -1540,9 +1544,6 @@
   }
   .min-h-dvh {
     min-height: 100dvh;
-  }
-  .min-h-screen {
-    min-height: 100vh;
   }
   .datatable-table {
     .datatable-wrapper & {
@@ -1699,9 +1700,6 @@
   .w-\[70\%\] {
     width: 70%;
   }
-  .w-\[200\%\] {
-    width: 200%;
-  }
   .w-\[600px\] {
     width: 600px;
   }
@@ -1800,12 +1798,6 @@
   .flex-grow {
     flex-grow: 1;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .origin-top {
-    transform-origin: top;
-  }
   .-translate-x-full {
     --tw-translate-x: -100%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
@@ -1842,12 +1834,6 @@
     --tw-translate-y: 100%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .scale-200 {
-    --tw-scale-x: 200%;
-    --tw-scale-y: 200%;
-    --tw-scale-z: 200%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
   .scale-\[0\.8\] {
     scale: 0.8;
   }
@@ -1883,9 +1869,6 @@
   }
   .list-inside {
     list-style-position: inside;
-  }
-  .list-outside {
-    list-style-position: outside;
   }
   .list-disc {
     list-style-type: disc;
@@ -2465,18 +2448,6 @@
       fill: white !important;
     }
   }
-  .apexcharts-gridline {
-    stroke: var(--color-gray-200) !important;
-    .dark & {
-      stroke: var(--color-gray-700) !important;
-    }
-  }
-  .apexcharts-xcrosshairs {
-    stroke: var(--color-gray-200) !important;
-    .dark & {
-      stroke: var(--color-gray-700) !important;
-    }
-  }
   .apexcharts-ycrosshairs {
     stroke: var(--color-gray-200) !important;
     .dark & {
@@ -2810,23 +2781,20 @@
   .text-\[\#005db5\] {
     color: #005db5;
   }
+  .text-black {
+    color: var(--color-black);
+  }
   .text-blue-600 {
     color: var(--color-blue-600);
   }
   .text-gray-200 {
     color: var(--color-gray-200);
   }
-  .text-gray-300 {
-    color: var(--color-gray-300);
-  }
   .text-gray-400 {
     color: var(--color-gray-400);
   }
   .text-gray-500 {
     color: var(--color-gray-500);
-  }
-  .text-gray-500\! {
-    color: var(--color-gray-500) !important;
   }
   .text-gray-600 {
     color: var(--color-gray-600);
@@ -2851,9 +2819,6 @@
   }
   .uppercase {
     text-transform: uppercase;
-  }
-  .underline {
-    text-decoration-line: underline;
   }
   .opacity-0 {
     opacity: 0%;
@@ -3140,11 +3105,6 @@
       width: 30%;
     }
   }
-  .sm\:w-\[150\%\] {
-    @media (width >= 40rem) {
-      width: 150%;
-    }
-  }
   .sm\:w-auto {
     @media (width >= 40rem) {
       width: auto;
@@ -3160,14 +3120,6 @@
       min-width: calc(6/12 * 100%);
     }
   }
-  .sm\:scale-150 {
-    @media (width >= 40rem) {
-      --tw-scale-x: 150%;
-      --tw-scale-y: 150%;
-      --tw-scale-z: 150%;
-      scale: var(--tw-scale-x) var(--tw-scale-y);
-    }
-  }
   .sm\:grid-cols-2 {
     @media (width >= 40rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -3181,11 +3133,6 @@
   .sm\:flex-row {
     @media (width >= 40rem) {
       flex-direction: row;
-    }
-  }
-  .sm\:justify-around {
-    @media (width >= 40rem) {
-      justify-content: space-around;
     }
   }
   .sm\:gap-8 {
@@ -3379,9 +3326,19 @@
       margin-right: calc(var(--spacing) * -12);
     }
   }
+  .md\:-mr-14 {
+    @media (width >= 48rem) {
+      margin-right: calc(var(--spacing) * -14);
+    }
+  }
   .md\:-ml-12 {
     @media (width >= 48rem) {
       margin-left: calc(var(--spacing) * -12);
+    }
+  }
+  .md\:-ml-14 {
+    @media (width >= 48rem) {
+      margin-left: calc(var(--spacing) * -14);
     }
   }
   .md\:block {
@@ -3432,14 +3389,6 @@
   .md\:max-w-\[360px\] {
     @media (width >= 48rem) {
       max-width: 360px;
-    }
-  }
-  .md\:scale-100 {
-    @media (width >= 48rem) {
-      --tw-scale-x: 100%;
-      --tw-scale-y: 100%;
-      --tw-scale-z: 100%;
-      scale: var(--tw-scale-x) var(--tw-scale-y);
     }
   }
   .md\:grid-cols-2 {
@@ -3503,14 +3452,14 @@
       border-top-right-radius: var(--radius-2xl);
     }
   }
-  .md\:p-6 {
-    @media (width >= 48rem) {
-      padding: calc(var(--spacing) * 6);
-    }
-  }
   .md\:px-6\! {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 6) !important;
+    }
+  }
+  .md\:px-10 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 10);
     }
   }
   .md\:px-12 {
@@ -3658,9 +3607,34 @@
       grid-column-end: 11 !important;
     }
   }
+  .lg\:-mx-10 {
+    @media (width >= 64rem) {
+      margin-inline: calc(var(--spacing) * -10);
+    }
+  }
+  .lg\:-mt-0 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * -0);
+    }
+  }
+  .lg\:-mt-4 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * -4);
+    }
+  }
   .lg\:mt-0 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:-mr-10 {
+    @media (width >= 64rem) {
+      margin-right: calc(var(--spacing) * -10);
+    }
+  }
+  .lg\:-mr-14 {
+    @media (width >= 64rem) {
+      margin-right: calc(var(--spacing) * -14);
     }
   }
   .lg\:mb-0 {
@@ -3668,9 +3642,24 @@
       margin-bottom: calc(var(--spacing) * 0);
     }
   }
+  .lg\:-ml-10 {
+    @media (width >= 64rem) {
+      margin-left: calc(var(--spacing) * -10);
+    }
+  }
+  .lg\:-ml-14 {
+    @media (width >= 64rem) {
+      margin-left: calc(var(--spacing) * -14);
+    }
+  }
   .lg\:ml-4\! {
     @media (width >= 64rem) {
       margin-left: calc(var(--spacing) * 4) !important;
+    }
+  }
+  .lg\:block {
+    @media (width >= 64rem) {
+      display: block;
     }
   }
   .lg\:flex {
@@ -3691,11 +3680,6 @@
   .lg\:w-\[15\%\] {
     @media (width >= 64rem) {
       width: 15%;
-    }
-  }
-  .lg\:w-\[60\%\]\! {
-    @media (width >= 64rem) {
-      width: 60% !important;
     }
   }
   .lg\:w-\[62\%\] {
@@ -3777,9 +3761,24 @@
       padding-inline: calc(var(--spacing) * 6);
     }
   }
+  .lg\:px-10 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:px-10\! {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 10) !important;
+    }
+  }
   .lg\:px-14 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 14);
+    }
+  }
+  .lg\:px-14\! {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 14) !important;
     }
   }
   .lg\:text-left\! {
@@ -3816,9 +3815,44 @@
       grid-column: span 4 / span 4;
     }
   }
+  .xl\:-mx-14\! {
+    @media (width >= 80rem) {
+      margin-inline: calc(var(--spacing) * -14) !important;
+    }
+  }
+  .xl\:-mr-14 {
+    @media (width >= 80rem) {
+      margin-right: calc(var(--spacing) * -14);
+    }
+  }
+  .xl\:-ml-14 {
+    @media (width >= 80rem) {
+      margin-left: calc(var(--spacing) * -14);
+    }
+  }
+  .xl\:block {
+    @media (width >= 80rem) {
+      display: block;
+    }
+  }
+  .xl\:hidden {
+    @media (width >= 80rem) {
+      display: none;
+    }
+  }
   .xl\:max-w-\[580px\] {
     @media (width >= 80rem) {
       max-width: 580px;
+    }
+  }
+  .xl\:px-3 {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 3);
+    }
+  }
+  .xl\:px-14\! {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 14) !important;
     }
   }
   .rtl\:rotate-180 {
@@ -4402,21 +4436,6 @@
   inherits: false;
   initial-value: 0;
 }
-@property --tw-scale-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
 @property --tw-rotate-x {
   syntax: "*";
   inherits: false;
@@ -4615,4 +4634,19 @@
 @property --tw-ease {
   syntax: "*";
   inherits: false;
+}
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
 }
